--- a/flask/app/templates/history.html
+++ b/flask/app/templates/history.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=download" />
     <title>History Page</title>
 </head>
 <body class="lightmode"> 
@@ -25,6 +26,9 @@
         <div class="center">
             <span>History</span>
         </div>
+        <a href="{{ url_for('export') }}">
+            <span class="material-symbols-outlined">download</span>
+        </a>
     </div>
     
     <div class="item" data-id="1">
