--- a/flask/app/templates/edit.html
+++ b/flask/app/templates/edit.html
@@ -74,7 +74,7 @@
             <div class="input-box-row2-left">
               <label class="form-label">Item Amount</label>
               <div class="center">
-                <input type="number" class="input-box-row2" name="getamount" value="{{ item.itemAmount }}" min="0" required>
+                <input type="number" class="input-box-row2" name="getamount" value="{{ item.itemAmount }}" min="{{ item.itemAmount }}" placeholder="Fill stock" required>
               </div>
             </div>
             <div class="input-box-row2-right">
